update 用户前缀去掉